--- a/application.yml
+++ b/application.yml
@@ -1,16 +1,18 @@
 spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: user
+    password: 1234
+    url: jdbc:mysql://localhost:3307/petclinic_msa
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        show_sql: true
+        format_sql: true
+
   application:
-    name: config-server
-
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/my123dsa/ct-config-repository
-          default-label: main
-          timeout: 5
-
-
-
-server:
-  port: 8888
+    name: vet-service
