--- a/oner-service.yml
+++ b/oner-service.yml
@@ -2,13 +2,14 @@ spring:
   application:
     name: oner-service
   datasource:
-    url: jdbc:mysql://localhost:3307/petclinic_msa
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: user
     password: 1234
+    url: jdbc:mysql://localhost:3307/petclinic_msa
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
